K8S/giftSuggestion-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gift-suggestions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gift-suggestion-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: gift-suggestion-service
        aadpodidbinding: pod-identity
    spec:
      containers:
        - name: gift-suggestion-service
          image: givrprodacr.azurecr.io/gift-suggestion-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              cpu: 150m
              memory: 250Mi
            limits:
              memory: "900Mi"
              cpu: "700m"
---
apiVersion: v1
kind: Service
metadata:
  name: gift-suggestion-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: gift-suggestion-service
  ports:
    - name: gift-suggestion-service
      protocol: TCP
      port: 80
      targetPort: 5000
