K8S/giftSuggestion-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: gift-suggestionnp-srv
spec:
  type: NodePort
  selector:
    app: gift-suggestion-service
  ports:
    - name: gift-suggestion-service
      protocol: TCP
      port: 80
      targetPort: 80
