K8S/ui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: givr-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: givr-ui
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: givr-ui
    spec:
      containers:
        - name: givr-ui
          image: givrprodacr.azurecr.io/givr-ui:latest
          resources:
            requests:
              cpu: 250m
              memory: 350Mi
            limits:
              memory: "900Mi"
              cpu: "1100m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: ui-clusterip-srv
spec:
  selector:
    app: givr-ui
  type: ClusterIP
  ports:
    - name: givr-ui
      protocol: TCP
      port: 8080
      targetPort: 8080
