K8S/ui-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-loadbalancer
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: gift-genius-prod-infra
spec:
  type: LoadBalancer
  loadBalancerIP: 20.9.21.31
  externalTrafficPolicy: Local
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: givr-ui
    - port: 443
      targetPort: 8080
      protocol: TCP
      name: givr-ui-https
  selector:
    app: givr-ui
