K8S/ui-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-np-srv
  namespace: default
spec:
  type: NodePort
  selector:
    app: givr-ui
  ports:
    - name: givr-ui
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: givr-ui-https
      protocol: TCP
      port: 443
      targetPort: 443
