K8S/ui-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - givr.ai
      secretName: ssl-cert-secret
  rules:
    - host: givr.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: givr-ui
                port:
                  number: 8080
